[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "leetforge"
version = "1.0.0"
description = "LeetForge — 你的 LeetCode Hot100 刷题锻造台。自动同步、智能复习、炫彩看板，一站搞定。"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
    "playwright",
    "schedule",
    "rich",
]

[project.scripts]
leetcode = "leetcode_auto.sync:main"
