[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "offerpilot"
version = "2.0.0"
description = "OfferPilot — 你的 AI 求职导航员。刷题同步、智能复习、代码优化、简历分析、模拟面试，一站搞定。"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
    "playwright",
    "schedule",
    "rich",
]

[project.scripts]
leetcode = "leetcode_auto.sync:main"
