[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brushup"
version = "2.0.0"
description = "BrushUp — LeetCode 刷题同步、间隔复习、AI 代码分析、简历优化、模拟面试"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "python-dotenv",
    "playwright",
    "schedule",
    "rich",
]

[project.scripts]
leetcode = "leetcode_auto.cli:main"
